Code updated to run with docker

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,4 +1,6 @@
 FROM openjdk:17-jdk-alpine
 MAINTAINER Sandip
-COPY target/spring-reactive-post-server-1.0.0-SNAPSHOT.jar spring-reactive-post-server-1.0.0-SNAPSHOT.jar
-ENTRYPOINT ["java","-jar","/spring-reactive-post-server-1.0.0-SNAPSHOT.jar"]
+ARG JAR_FILE=target/*.jar
+COPY ${JAR_FILE} app.jar
+EXPOSE 8080
+ENTRYPOINT ["java","-jar","/app.jar"]
