--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ version: "3.5" # specify docker-compose version, v3.5 is compatible with docker 
 # Define the services/containers to be run
 services:
   redis:
+    container_name: redis
     image: redis
     ports:
       - "6379:6379"
@@ -11,6 +12,7 @@ services:
       - backend
 
   mongodb:
+    container_name: mongo
     image: mongo
     volumes:
       - mongodata:/data/db
@@ -26,7 +28,7 @@ services:
     environment:
       - "BACKEND_API_URL=http://api:8080"
     ports:
-      - "4200:4200"
+      - "80:80"
     depends_on:
       - api
     networks:
